wip: start revision of philosophical foundation

--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -312,19 +312,19 @@ We proceed by defending the axiom schema for the static foundation, then continu
 \subsection{Static Base}~\label{static}
 Like other dynamic logics for knowledge and belief, \DASL\ consists of a static base of axiom schemas for the knowledge and belief operators. This section explains and defends \DASL's static base, as they represent a novel axiomatization of formal epistemology and a contribution to the literature by this thesis. 
 
-The standard axiom schema for the knowledge operator, whether for a wholly static logic or for the static base of a dynamic system, is that of the \SFive\ operator, described earlier in section~\ref{epistemic_logic}. This axiom schema for the knowledge operator was first formalized by Aumann in \cite{Aumann} as a logical foundation for the ideally rational agents of game theory and decision theory. Thus, we can consider that axiom schema to be the top tier of agent rationality axioms, where the belief operator is not even necessary.
+The standard axiom schema for the knowledge operator, whether for a wholly static logic or for the static base of a dynamic system, is that of the \SFive\ operator, described earlier in section~\ref{epistemic_logic}. This axiom schema for the knowledge operator's role in classical economics was first formalized by Aumann in \cite{Aumann}. In this model, the belief operator is not necessary, because agents do not form false beliefs. They either know a proposition, or they know that they do not know it. This is not the case for humans in most epistemic situations.
 
-Lower tiers attempt to formalize axioms for \emph{boundedly rational} agents. An ideally rational agent has no limit to her ability to reason about higher order iterations of interactive epistemology. For example, common knowledge is formalized among agents $i$ and $j$ in the following way, where $i,j\in G$, the group:
+%Lower tiers attempt to formalize axioms for \emph{boundedly rational} agents. An ideally rational agent has no limit to her ability to reason about higher order iterations of interactive epistemology. For example, common knowledge is formalized among agents $i$ and $j$ in the following way, where $i,j\in G$, the group:
+%
+%\begin{eqnarray}~\label{common_knowledge}
+%	\mathbb{C}_{G}\varphi \equiv (\varphi \iimplies (\Kns{i}\varphi \tland \Kns{j}\varphi \tland \mathbb{C}_{G}(\Kns{i}\varphi \tland \Kns{j}\varphi))).
+%\end{eqnarray}
+%
+%Thus, an ideally rational agent can carry this to any arbitrary $\mathit{n^{th}}$ order of $i$ knows that $j$ knows that $i$ knows \dots Herein, I refer to the $n$ levels of interactive epistemic knowledge as epistemic depth. Clearly, humans cannot actively carry out this depth of interactive reasoning, and this shows experimentally in games whose solutions require more than two or three levels of depth, \emph{e.g.,} the centipede game. Agents with bounded rationality have their epistemic depths formally bounded, to better reflect the limitations of human reasoning.
+%
+%Bounding agents in this way allows for formal models that capture how a human agent might realistically deviate from optimal Nash equilibria of games. However, bounding rationality in this way does not allow for agents who act based on false beliefs. A lower tier rationality model might impose bounds on the epistemic depth of its agents and also allow for the agents to make decisions based on false beliefs.
 
-\begin{eqnarray}~\label{common_knowledge}
-	\mathbb{C}_{G}\varphi \equiv (\varphi \iimplies (\Kns{i}\varphi \tland \Kns{j}\varphi \tland \mathbb{C}_{G}(\Kns{i}\varphi \tland \Kns{j}\varphi))).
-\end{eqnarray}
-
-Thus, an ideally rational agent can carry this to any arbitrary $\mathit{n^{th}}$ order of $i$ knows that $j$ knows that $i$ knows \dots Herein, I refer to the $n$ levels of interactive epistemic knowledge as epistemic depth. Clearly, humans cannot actively carry out this depth of interactive reasoning, and this shows experimentally in games whose solutions require more than two or three levels of depth, \emph{e.g.,} the centipede game. Agents with bounded rationality have their epistemic depths formally bounded, to better reflect the limitations of human reasoning.
-
-Bounding agents in this way allows for formal models that capture how a human agent might realistically deviate from optimal Nash equilibria of games. However, bounding rationality in this way does not allow for agents who act based on false beliefs. A lower tier rationality model might impose bounds on the epistemic depth of its agents and also allow for the agents to make decisions based on false beliefs.
-
-The static base of \DASL\ logic does not cover epistemic depth at all, and instead attends to the formalization of agents who can make decisions based on false beliefs, but whose beliefs are all justified. It is a very low tier of rationality.
+The static base of \DASL\ logic attends to the formalization of agents who can make decisions based on false beliefs, but whose beliefs are all justified. It is a weaker model than \SFive, while still making an idealization about its agents.
 
 Recall the static base of \DASL.
 
@@ -364,7 +364,7 @@ In constructing our static base, we must identify the desirable features to be a
 
 First, the model should be well-balanced in the trade off of normativity \emph{vs.} realism so that it can be used to analyze real-world cases as well as idealized formal cases. It scores well on realism to the extent that it represents the reasoning of human-like agents in environments of relative messiness, like the real world. It scores well on normativity to the extent that its departures from realism are improvements over reality to be strived for. Not all idealizations in models are normative in character, as we shall see.
 
-Second, the model should make sense from an epistemological standpoint, \emph{viz.} the philosophical considerations of epistemologists. To construct a system of epistemic logic is to construct a formal theory of epistemology for \emph{some} type of agent, whether it is a perfect deductive reasoner like a computer over a relatively small database ontology or \emph{homo economicus} in well-structured strategic situations, or an imperfect reasoner like a human in the real world. So far, the latter type of agent has been neglected by formal efforts, because attention has been on properties of formal systems, see below, rather than primarily on their philosophical foundations. 
+Second, the model should make sense from an epistemological standpoint, \emph{viz.} the philosophical considerations of epistemologists. To construct a system of epistemic logic is to construct a formal theory of epistemology for \emph{some} type of agent, whether it is a perfect deductive reasoner like a computer over a relatively small database ontology or \emph{homo economicus} in well-structured strategic situations, or an imperfect reasoner like a human in the real world. So far, the latter type of agent has been largely neglected by formal efforts, because attention has been on properties of formal systems, see below, rather than primarily on their philosophical foundations.\footnote{One significant exception to this claim is the study of bounded rationality, which imposes limitations on the number of iterations of $i$ knows that $k$ knows that $i$ knows \dots We regard this approach as valuable, but taking a different approach than ours. Typically, bounded rationality approaches still assume that knowledge is \SFive, while we relax this assumption because we regard it is philosophically untenable.}
 
 Third, the model should be a sound and complete logical system to serve as a static foundation for an extension that treats actions. Just because attention must be paid to the philosophical foundations and motivations for a formal system does not mean that the formal system is off the hook for the standard desiderata of a logic. The logic must avert a collapse of belief and knowledge. The logic must abide by the principle of indistinguishability, where an agent cannot distinguish between possible worlds it cannot rule out. 
 
@@ -373,7 +373,7 @@ A model of rationality is situated in a spectrum trading off realism for normati
 
 % First, we seek a model that is low on the tiers of rationality, so that it achieves a level of realism suitable for human agents but also maintains some normative prescriptions as a theory of rationality. The S5 common knowledge tier describes the behavior of ideally rational agents, and in this sense is wholly normative. However, this level of rationality is not achievable by human reasoners, due to their limited cognitive capacity. Thus, the theory of S5 common knowledge can serve to evaluate decisions made by human agents, and can realistically model only a very limited space of human behaviors. One would expect, however, that this theory of rationality would be an appropriate balance of realism and normativity for future systems of artificial intelligence. 
 
-Theories of bounded rationality achieve more realism, but the trade off of realism and normativity is not clearly balanced. By keeping the S5 knowledge operator and limiting the agents' epistemic depth, theories of bounded rationality seek to model actual human behavior in the rarefied world of games of perfect information, where the agents know the payoff structure and the game tree or game matrix. This is fine for modeling humans in behavioral economics experiments, where they are sitting at a table with a formal description of the game in front of them. But for the messier world of cockpits, emergency rooms, power plants, and automobiles, this assumption of S5 knowledge fails. The difference is between \emph{closed } worlds and \emph{open} worlds. A formal game environment is a closed world, meaning the human is aware of all of the relevant propositions and their truth values, \emph{i.e.,} the game structure. The real world's environment is an open one, where the set of relevant propositions is a mystery, and the truth values of the propositions known to be relevant is a matter of uncertainty. Thus, the achievement of realism in idealized games translates to little normative value in the real world.
+Theories of bounded rationality achieve more realism, but the trade off of realism and normativity is not clearly balanced. By keeping the \SFive\ knowledge operator and limiting the agents' epistemic depth, theories of bounded rationality seek to model actual human behavior in the rarefied world of games of perfect information, where the agents know the payoff structure and the game tree or game matrix. This is fine for modeling humans in behavioral economics experiments, where they are sitting at a table with a formal description of the game in front of them. But for the messier world of cockpits, emergency rooms, power plants, and automobiles, this assumption of \SFive\ knowledge fails. The difference is between \emph{closed } worlds and \emph{open} worlds. A formal game environment is a closed world, meaning the human is aware of all of the relevant propositions and their truth values, \emph{i.e.,} the game structure. The real world's environment is an open one, where the set of relevant propositions is a mystery, and the truth values of the propositions known to be relevant is a matter of uncertainty. Thus, the achievement of realism in idealized games translates to little normative value in the real world.
 
 %The realism of this latter assumption is dubious, and therefore the theory's applicability is limited. Likewise, theories of bounded rationality with S5 knowledge do not offer clear normative prescriptions or evaluative guidelines. Rather, it appears to be an attempt to makes sense of the following finding of behavioral economics: In some situations, human agents depart from the Nash equilibrium, and they both end up with higher payoffs. The centipede game is a good example. The Nash equilibrium states that player $A$ should immediately take the money on the table, whereas experiments show that humans regularly let the pot build up until a few steps before the end, one of the players realizes what will happen, and takes the majority of the pot. From the perspective of maximizing expected payoffs, it is hard to criticize either player, as each achieved higher payoff from this outcome than they would have in the Nash equilibrium. A theory of bounded rationality takes this at face value, and seeks to build a model for it. With such a model, the hope is to offer general normative guidance for agents with bounded rationality. However, to examine the particular outcome of a centipede game, supposing player $B$ is the one with the minority payoff, we can truly say that $B$ will regret not having taken the majority pot one step earlier, and properly that he \emph{should} have, because then he would have had a higher payoff, and so this outcome is not in subgame perfect equilibrium. If the game is analyzed as a sequence of decisions, the final decision the minority-payoff-receiving player makes is the wrong one, normatively. Bounded rationality with S5 knowledge explains this as bad luck determined by the structure of the game and the first (or second) mover advantage, depending on the players' bounds on epistemic depth. But it is nonetheless true that $B$ could have and should have taken the majority pot one step earlier, and this is not a feature of games with outcomes determined by first (or second) mover advantage, like the game of nim with a 3-4-5 setup (or nim with a 1-3-5-7 setup). 
 
@@ -383,14 +383,15 @@ Theories of bounded rationality achieve more realism, but the trade off of reali
 
 %For lower tier theories of bounded rationality with imperfect information, we find agents... 
 
-Other attempts to relax the assumptions of classical game theory abandon the assumption of S5 knowledge and turn toward probability theory in order to capture uncertainty. Uncertainty of various sorts can be adequately modeled in this fashion, including of the game's structure, and the type of the other agents, \emph{e.g.} whether they are a type of agent capable of reasoning 3 epistemic levels deep or merely 2 levels deep. This is realistic for translation to the real world, and normative in that the probabilistic reasoning must abide by the axioms of probability theory. However, humans are not perfect Bayesian reasoners, so this model is unable to formally represent the mistakes humans frequently make when reasoning probabilistically. A realistic model should be able to model mistakes systematically in such a way that valid inferences can be made from mistakes in belief or action.
+Other attempts to relax the assumptions of classical game theory abandon the assumption of \SFive\ knowledge and turn toward probability theory in order to capture uncertainty. Uncertainty of various sorts can be adequately modeled in this fashion, including of the game's structure, and the type of the other agents, \emph{e.g.} whether they are a type of agent capable of reasoning 3 epistemic levels deep or merely 2 levels deep. This is realistic for translation to the real world, and normative in that the probabilistic reasoning must abide by the axioms of probability theory. However, humans are not perfect Bayesian reasoners, so this model is unable to formally represent the mistakes humans frequently make when reasoning probabilistically without additional adjustments. A realistic model should be able to model mistakes systematically in such a way that valid inferences can be made from mistakes in belief or action.
 
-The model presented here abandons the S5 knowledge assumption in order to model how beliefs and knowledge logically relate for a new type of agent, one level above a normal human agent. This agent knows some things, believes more than she knows, and has false beliefs. She is different from normal humans in that she believes a proposition only if she has a good justification to do so, like the observation of evidence that supports the proposition, or because she believes she has made a valid inference to that proposition. The agent is realistic to the extent that a very careful human reasoner can achieve this level some of the time, when it really matters to do so, and this model is normative to the extent that an agent with more true beliefs about the environment will make better decisions after the dynamic extension of actions is layered on top. We call this agent a Grounded-Coherent Agent (GCA).
+The model presented here abandons the \SFive\ knowledge assumption in order to model how beliefs and knowledge logically relate for a new type of agent, only slightly improved over a normal human agent. This agent knows some things, believes more than she knows, and has false beliefs. She is different from normal humans in that she believes a proposition only if she has a good justification to do so, like the observation of evidence that supports the proposition, or because she believes she has made a valid inference to that proposition. The agent is realistic to the extent that a very careful human reasoner can achieve this level some of the time, when it really matters to do so, and this model is normative to the extent that an agent with more true beliefs about the environment will make better decisions after the dynamic extension of actions is layered on top. 
+%We call this agent a Grounded-Coherent Agent (GCA).
 %This model can subsume the models of classical game theory and bounded rationality by turning certain knobs in the metalanguage, and so in that sense the normative aspect can be dialed up at the expense of the ability to model humans who make mistakes. 
 
-For completeness, we describe the lowest tier of model. It is a model of normal human reasoners studied by behavioral economists and psychologists. They believe things based on systemic biases and make no effort to make a belief system consistent or grounded in evidence. Modeling such an agent from a logical standpoint is challenging for obvious reasons, and certainly these models do not pretend to be normative beyond lessons about how reasoning and beliefs can go awry, for example through cognitive biases and fallacious inferences. 
+%For completeness, we describe the lowest tier of model. It is a model of normal human reasoners studied by behavioral economists and psychologists. They believe things based on systemic biases and make no effort to make a belief system consistent or grounded in evidence. Modeling such an agent from a logical standpoint is challenging for obvious reasons, and certainly these models do not pretend to be normative beyond lessons about how reasoning and beliefs can go awry, for example through cognitive biases and fallacious inferences. 
 
-Along similar lines but in pursuit of different theoretical interests is the so-called Belief-Desire-Intention (BDI) model of action. This model seeks to explain the modules responsible for actions among humans and presumably other potential agents. The model holds that beliefs about the world, desires for how the world could be, and intentions to realize those desired states, are jointly sufficient and individually necessary conditions for actions. This model is related to the GCA model defended here in that its agents can make mistakes due to false beliefs. 
+Along similar lines but in pursuit of different theoretical interests is the so-called Belief-Desire-Intention (BDI) model of action. This model seeks to explain the modules responsible for actions among humans and presumably other potential agents. The model holds that beliefs about the world, desires for how the world could be, and intentions to realize those desired states, are jointly sufficient and individually necessary conditions for actions. This model is related to the model defended here in that its agents can make mistakes due to false beliefs. 
 
 \paragraph{2. Philosophical Foundations}
 A formal epistemic theory should strive for adequate philosophical grounding in good epistemology. Hintikka took this very seriously in his 1967 book on \emph{Knowledge and Belief}~\cite{Hintikka}, which serves as a seminal work in the field of formal epistemology. Hintikka dedicates a great portion of the book to exploring how his formal system handles the intuitive judgments of philosophers regarding ordinary language statements, which was the primary method at the time. An epistemic logic divorced from a philosophical foundation is no longer an epistemic logic for reasoning about human-like knowledge. Some idealized epistemic logics can serve as logics for reasoning about machine knowledge in closed worlds, but as machines come to interact with larger and more complex parts of the world, these idealized logics diminish in adequacy, as computational limitations prevent the machine from implementing even a perfect Bayesian reasoning system. Thus, careful consideration of an epistemic logic's philosophical foundation is in order.
