--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -396,11 +396,11 @@ Along similar lines but in pursuit of different theoretical interests is the so-
 \paragraph{2. Philosophical Foundations}
 A formal epistemic theory should strive for adequate philosophical grounding in good epistemology. Hintikka took this very seriously in his 1967 book on \emph{Knowledge and Belief}~\cite{Hintikka}, which serves as a seminal work in the field of formal epistemology. Hintikka dedicates a great portion of the book to exploring how his formal system handles the intuitive judgments of philosophers regarding ordinary language statements, which was the primary method at the time. An epistemic logic divorced from a philosophical foundation is no longer an epistemic logic for reasoning about human-like knowledge. Some idealized epistemic logics can serve as logics for reasoning about machine knowledge in closed worlds, but as machines come to interact with larger and more complex parts of the world, these idealized logics diminish in adequacy, as computational limitations prevent the machine from implementing even a perfect Bayesian reasoning system. Thus, careful consideration of an epistemic logic's philosophical foundation is in order.
 
-Epistemologists primarily seek a theory of justification that can avoid Gettier-style counterexamples~\cite{Gettier} and a theory of knowledge that can solve the problem of skepticism. A system of formal epistemology should respect these questions by coherently addressing them as formal theories of epistemology proper. The S5 with common knowledge epistemic logic does not strive for this, nor is it clear that theories of bounded rationality do, either. Recent work in epistemology has applied Bayesian reasoning to the justification problem, and probabilistic epistemic logics help formalize these Bayesian approaches. We briefly recount some broad positions of interest from epistemology that our model should take a considered position on.
+Epistemologists primarily seek a theory of justification that can avoid Gettier-style counterexamples~\cite{Gettier} and a theory of knowledge that can solve the problem of skepticism. A system of formal epistemology should respect these questions by coherently addressing them. We consider it required for a system of epistemic logic to be evaluated as a theory of epistemology. The epistemic logic of \SFive\ with common knowledge does not strive for this. We briefly recount some broad positions of interest from epistemology that our model should take a considered position on.
 
 
 \subparagraph{The Space of Justification Theories}
-Epistemology is the study of knowledge, and knowledge is widely held to require truth and justified beliefs in some way, with perhaps additional conditions being required for a jointly sufficient set of conditions. Our model defines truth through the semantic $\models$ relation between worlds and formulas, and the knowledge explicitly requires belief via the axiom \emph{Knowledge implies belief}. Justification remains for us to elaborate. A theory of epistemic justification must respond to the infinite regress argument which concludes that justified beliefs are impossible. The infinite regress argument against justification runs as follows:
+Epistemology is the study of knowledge, and knowledge is widely held to require truth and justified beliefs in some way, with perhaps additional conditions being required for a jointly sufficient set of conditions. Our model defines truth through the semantic $\models$ relation between worlds and formulas, and knowledge explicitly requires belief via the axiom \emph{Knowledge implies Belief}. Justification remains for us to elaborate, although we do not model it explicitly with a justification modal operator. A theory of epistemic justification must respond to the infinite regress argument which concludes that justified beliefs are impossible. The infinite regress argument against justification runs as follows:
 \begin{enumerate}
 	\item A belief that $\varphi$ is justified if and only if the belief that $\varphi$ is justified by other justified beliefs.
 	\item A justification chain of beliefs either: (a) terminates with unjustified base beliefs, or (b) is circular, or (c) is infinite and non-circular.
@@ -529,8 +529,8 @@ Many find it intuitive to speak of the epistemic relation as an equivalence or i
 
 %In Rushby's alternative model, he discusses a pilot's discernment of the presence of instrument conflict, which he assumes for simplicity to be always accurate. Is this not an assumption of knowledge for simplicity? Similarly, when the pilot is aware of the autopilot status through observing an indicator on a display or through inference from the aircraft's behavior, it is not clear that this is not a case of knowing the autopilot's status. Rushby's description of the true belief seems to make it fit with any epistemologist's theory of knowledge. 
 
-\subsubsection*{Knowledge and Belief Axioms}
-Knowledge is weaker here than in most epistemic logics~\cite{FHMV,DEL,Hintikka}. Knowledge is almost universally formalized as an S5 modal operator, including axiom schema for positive and negative introspection. Rushby suspects that because the analyses of aviation mishaps lays the blame on a failure of negative introspection in~\cite{AhrenbachGoodloe}, the decision to exclude the negative introspection axiom from the schema appears contrived. Rushby proves that to include the negative introspection axiom would cause a collapse of knowledge and belief into equivalence, due to the axiom \emph{Confidence in Belief}: $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$, which to our knowledge was first proved by Lenzen~\cite{Lenzen}. \emph{Confidence in Belief}, additionally, is the converse of Hintikka's choice for relating the two: $\Bels{i}\Kns{i}\varphi \iimplies \Bels{i}\varphi$. Axiom \emph{Confidence in Belief} will be defended below. Rushby's concern with the knowledge axioms, or lack thereof, can be summarized as follows.
+%\subsubsection*{Knowledge and Belief Axioms}
+%Knowledge is weaker here than in most epistemic logics~\cite{FHMV,DEL,Hintikka}. Knowledge is almost universally formalized as an \SFive\ modal operator, including axiom schema for positive and negative introspection. Rushby suspects that because the analyses of aviation mishaps lays the blame on a failure of negative introspection in~\cite{AhrenbachGoodloe}, the decision to exclude the negative introspection axiom from the schema appears contrived. Rushby proves that to include the negative introspection axiom would cause a collapse of knowledge and belief into equivalence, due to the axiom \emph{Confidence in Belief}: $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$, which to our knowledge was first proved by Lenzen~\cite{Lenzen}. \emph{Confidence in Belief}, additionally, is the converse of Hintikka's choice for relating the two: $\Bels{i}\Kns{i}\varphi \iimplies \Bels{i}\varphi$. Axiom \emph{Confidence in Belief} will be defended below. Rushby's concern with the knowledge axioms, or lack thereof, can be summarized as follows.
 %
 %\begin{enumerate}
 %	\item Negative introspection is a standard axiom for epistemic logic.
@@ -544,7 +544,9 @@ Knowledge is weaker here than in most epistemic logics~\cite{FHMV,DEL,Hintikka}.
 
 %We shall argue that premise 4 is false. Rushby's preference for the standard axioms, based on their preservation of an analysis based on false beliefs, fails to account for a feature of the present axioms which we shall endeavor to establish, namely that they more accurately describe real human knowledge and belief relations, whereas the standard axioms do not. Thus, while it is true that the analytical strength of the standard axioms would be preserved based on a false belief analysis, it does not follow that these axioms are preferable, because they do not accurately model human agency.
 
-%First, we defend the exclusion of negative introspection for the knowledge operator. Negative introspection, recall, holds that $\tlnot\Kns{i}\varphi\iimplies\Kns{i}\tlnot\Kns{i}\varphi$: If an agent, \emph{i} does not know $\varphi$, then \emph{i} knows that she does not know it. When it is phrased this way, it can seem at worst a bit confusing, but not obviously false. However, consider one's response when it is phrased the following equivalent way: An agent does not know $\varphi$ \emph{only if} she knows that she does not know $\varphi$. This deformalized version of the axiom makes it clear that knowledge of ignorance is being asserted as a \emph{necessary condition} for ignorance, or lack of knowledge. One would be hard pressed to find an epistemologist willing to defend this view. To further elaborate on the point, consider the contrapositive: $\tlnot\Kns{i}\tlnot\Kns{i}\varphi \iimplies \Kns{i}\varphi$: If \emph{i} does not know that she does not know $\varphi$, then she knows $\varphi$. The Pyrrhonian skeptics famously denied claims to all knowledge, even to the claim that they know nothing. Thus, for all formulas $\varphi$, $\tlnot\Kns{Pyrrhonian}\tlnot\Kns{Pyrrhonian}\varphi$. According to the negative introspection axiom, then, $\Kns{Pyrrhonian}\varphi$ for arbitrary $\varphi$, certainly a result they would be disturbed by.
+%First, we defend the exclusion of negative introspection for the knowledge operator. Negative introspection, recall, holds that $\tlnot\Kns{i}\varphi\iimplies\Kns{i}\tlnot\Kns{i}\varphi$: If an agent, $i$, does not know $\varphi$, then $i$ knows that she does not know it. When it is phrased this way, it can seem at worst a bit confusing, but not obviously false. However, consider one's response when it is phrased the following equivalent way: An agent does not know $\varphi$ \emph{only if} she knows that she does not know $\varphi$. This deformalized version of the axiom makes it clear that knowledge of ignorance is being asserted as a \emph{necessary condition} for ignorance, or lack of knowledge. One would be hard pressed to find an epistemologist willing to defend this view. To further elaborate on the point, consider the contrapositive: $\tlnot\Kns{i}\tlnot\Kns{i}\varphi \iimplies \Kns{i}\varphi$: If \emph{i} does not know that she does not know $\varphi$, then she knows $\varphi$. The Pyrrhonian skeptics famously denied claims to all knowledge, even to the claim that they know nothing. Thus, for all formulas $\varphi$, $\tlnot\Kns{Pyrrhonian}\tlnot\Kns{Pyrrhonian}\varphi$. According to the negative introspection axiom, then, $\Kns{Pyrrhonian}\varphi$ for arbitrary $\varphi$, certainly a result they would be disturbed by.
+
+\section{Indistinguishibility Satisfied}\label{sec:indist}
 
 Many find it intuitive to speak of the epistemic relation as an equivalence or indistinguishability relation, which requires it be symmetric. Symmetry, combined with the reflexivity underlying the Truth Axiom and transitivity of positive introspection, yields such an equivalence relation. It makes sense to say that world $v$ is epistemically possible from world $w$ for agent $i$ if $i$ cannot tell the two worlds apart, \emph{i.e.} they are indistinguishable. The power of this intuitive appeal presents a challenge for us. We must show that our axiom schema can satisfy the intuition behind epistemic indistinguishability without imposing symmetry on the epistemic relation.
 
@@ -609,7 +611,37 @@ Thus, in the static epistemic-doxastic logic of \DASL, the intuitively appealing
 
 
 %\PalPos{i}{\laa}\varphi \iimplies \Bels{i}\SPalPos{i}{\laa}\varphi$\\
+\section{Avoiding The Collapse}\label{sec:collapse_avoid}
 
+It is important that we maintain the distiction between knowledge and belief if we aim to model humans. To show that our logic maintains this distinction, we present the following counterexample.
+
+\begin{figure}[H]
+	\begin{center}
+		\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=4cm,
+		thick,base node/.style={circle,draw,minimum size=35pt}]
+		
+
+		\node[base node] (w) {\begin{tabular}{c}
+			$w:  \tlnot p$ \\ $\Bels{i}p$ \\ $\tlnot\Kns{i}p $
+			\end{tabular}};
+		\node[base node] (v) [right of=w] {\begin{tabular}{c}
+			$$\\$v: p$ \\ $$
+			\end{tabular}};
+		\path[]
+		(w) edge[loop above] node {$\Rel{k}^i$} (w)
+		(w) 
+		%		edge node[below] {} (w)
+		%	\draw [->] (v) edge[in=5,out=355,loop] node[right] {$R$} (v)
+		edge node[above] {$\Rel{b}^i$,$\Rel{k}^i$} (v);
+		
+		\end{tikzpicture}
+	\end{center}
+	\caption{A counterexample to $\Bels{i}\varphi\iimplies\Kns{i}\varphi$.}
+\end{figure}
+
+The counterexample is based on the key difference between belief and knowledge, namely that knowledge must be true, while belief does not need to be true. Here, at $w$, the proposition $p$ is not true. However, because $i$ only considers $p$ possible, and neglects the possibility that $\tlnot p$, she believes $i$ at $w$. Since $p$ is not true at $w$, and knowledge entails truth (via the reflexivity frame condition), it is not true at $w$ that $i$ knows $p$. Therefore, at $w$, $i$ believes $p$ but she does not know it.
+
+This suffices to show that the two modalities do not collapse. We have thus far defended the static base in terms of indistinguishibility and collapse avoidance. We turn now to soundness and completeness.
 
 \section{Soundness and Completeness}
 
