revise introduction to Static Base section

--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -354,10 +354,20 @@ Recall the static base of \DASL.
 
 As far as we can tell, this axiom scheme is novel, and disagrees with other attempts to model the interaction of knowledge and belief. The primary point of departure is that the knowledge operator is no longer and \SFive\ operator, but merely a T operator. Thus, it is severely weakened as a modal operator, but the corollary to this fact is that knowledge no longer has the imposing necessary conditions of positive and negative introspection. 
 
-%Defense of \SFive\ for knowledge rests on an interpretation of the knowledge operators not as capturing what agents \emph{actively} know at a moment, but rather what their knowledge allows them to potentially infer. Thus, the Distribution axiom is not a license for logical omniscience at a moment, but rather describes what is logically inferrable from what is known by an agent. Similarly for positive and negative introspection. We do not take this path in interpreting the knowledge operator. Instead, depart from the majority of formal epistemologists and interpret the knowledge operator as what is actively known by an agent at a moment.
+This section presents the desirable features that a static logic should have, and along the way argues against \SFive's appropriateness as an epistemic base. Before beginning, we briefly establish a consistent informal interpretation of knowledge and belief.
+
+Defense of \SFive\ for knowledge rests on an interpretation of the knowledge operators not as capturing what agents \emph{actively} know at a moment, but rather what their knowledge allows them to potentially infer. Thus, the Distribution axiom is not a license for logical omniscience at a moment, but rather describes what is logically inferrable from what is known by an agent. Similarly for positive and negative introspection. However, this defense does not quite provide positive reasons for accepting the \SFive\ axiom schemas. We present arguments against the positive and negative introspection axiom schemas that show them to be inappropriate even on an \emph{inferrable} or \emph{subjunctive} interpretation of knowledge, where an agent knows $\varphi$ if and only if her present knowledge allows her to come to know $\varphi$ after sufficient reflection or inference power.
+
+Doxastic logics similarly tend to adopt a subjunctive interpretation, where an agent believes $\varphi$ if and only if her current beliefs would allow her eventually infer $\varphi$. Both of these interpretations come straight out of Hintikka in \cite{Hintikka}. These explications suffer an obvious problem of circularity that we do not wish to suffer here. We wish to start from a more fundamental concept, and use it to build the notions of knowledge and belief. The more fundamental concept we use is \emph{evidence}.
+
+We shall say that an agent knows that $\varphi$ when all of her objectively observable evidence entails $\varphi$. Thus, we are still friendly to the subjunctive interpretations, because it reduces to an inferrability condition. However, we lack the problem of circularity. Similarly, for belief. We shall say that an agent believes that $\varphi$ when all of her subjectively available evidence entails that $\varphi$. We shall spell out the details to these components below.
+
+The formal theory of epistemology espoused by this dissertation departs from those typical of the field. We reject \SFive, we require the mixing of knowledge and belief operators, and we depend on more fundamental notions of evidence. Now we proceed to lay out what we take to be the desirable features of any epistemic logic.
+
+%We do not take this path in interpreting the knowledge operator. Instead, depart from the majority of formal epistemologists and interpret the knowledge operator as what is actively known by an agent at a moment.
 
 %We must justify this interpretation. 
-While ours is a model that departs from those that appear in formal epistemology, we shall argue that it does a good job of capturing the prominent theories of knowledge espoused by non-formal epistemologists. Our model is also situated well on the rationality tier for modeling realistic human agents whose beliefs are justified, which is a dramatic improvement, from the perspective of realism, over the higher tiers with \SFive\ common knowledge or \SFive\ bounded rationality.
+%While ours is a model that departs from those that appear in formal epistemology, we shall argue that it does a good job of capturing the prominent theories of knowledge espoused by non-formal epistemologists. Our model is also situated well on the rationality tier for modeling realistic human agents whose beliefs are justified, which is a dramatic improvement, from the perspective of realism, over the higher tiers with \SFive\ common knowledge or \SFive\ bounded rationality.
 
 \subsubsection{Desiderata of a Static Base}
 In constructing our static base, we must identify the desirable features to be achieved. A model of knowledge and belief for human-like agents can be assessed by how well it satisfies these desirable features. 
