wip: revise philosophy section

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -4,6 +4,9 @@
 \bibliographystyle{unsrt}
 %\bibliography{bibtex_entries}
 \begin{thebibliography}{9}
+		\bibitem{ArtemovNogina}
+		Artemov, S.; Nogina, E. ntroducing Justification into Epistemic Logic. {\em Journal of Logic and Computation } 15. 1059-1073. (2005). 
+	
 	 	\bibitem{faa} Federal Aviation Administration \\ website: https://www.faasafety.gov/files/gslac/library\\/documents/2012/Nov/71574/DirtyDozenWeb3.pdf,\\
 	 	retrieved 10/5/2016.
 	 	\bibitem{boeing} Rankin, William. ``MEDA Investigation Process", Aero Quarterly.\\ Website: Boeing.com/commercial/aeromagazine/articles/qtr\_2\_07/aero\_q207\_article3.pdf,
@@ -31,6 +34,8 @@
 	 	\bibitem{dewind}
 	 	De Wind, P. ``Modal logic in Coq." M.Sc. University of Amsterdam. 2001.
 	 	
+	 	\bibitem{evidentialism}
+	 	Feldman, R.; Conee, E. Evidentialism. {\em Philosopical Studies}. (Vol. 48 (1): pp 15-34). 1985.
 	 	\bibitem{Gettier}
 	 	Gettier, E. Is Justified True Belief Knowledge? {\em Analysis} (Vol. 23, pp. 121-123). 1963.
 	 	
